# SSVNewRogue

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.0000000  CMakeLists.txt.user.5e4d6ab
_RELEASE/Data/: assets.json  lime.json
_RELEASE/Data/Animations/: animationsHuman.json
_RELEASE/Data/Pdn/: src.pdn  test.pdn
_RELEASE/Data/Tilesets/: tilesetHuman.json
src/: main.cpp
src/Components/: NRCAnimationController.cpp  NRCAnimationController.h  NRCHumanoid.cpp  NRCHumanoid.h  NRCHumanoid.hpp  NRCHumanoidAnimationController.cpp  NRCHumanoidAnimationController.h  NRCHumanoidAnimationController.hpp  NRCPhysics.cpp  NRCPhysics.h  NRCPhysics.hpp  NRCPlayer.cpp  NRCPlayer.h  NRCPlayer.hpp  NRCRender.cpp  NRCRender.h  NRCRender.hpp  NRCSensor.cpp  NRCSensor.h  NRCTrail.cpp  NRCTrail.h  NRCTrail.hpp  NRCWanderer.cpp  NRCWanderer.h  NRCWanderer.hpp
src/Core/: NRAssets.cpp  NRAssets.h  NRAssets.hpp  NRDependencies.cpp  NRDependencies.h  NRDependencies.hpp  NRFactory.cpp  NRFactory.h  NRFactory.hpp  NRGame.cpp  NRGame.h  NRGame.hpp  NRGroups.h  NRGroups.hpp
src/Utils/: NRAnimation.cpp  NRAnimation.h  NRSensor.cpp  NRSensor.h  NRSensor.hpp  NRUtils.cpp  NRUtils.h  NRUtils.hpp
